aws-cli/eks/yamls/networkPolicies/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress

# Need to add allow from CoreDNS, ServiceMesh, AWS IMDS
